Add the tests from de ft_printf

--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -20,8 +20,7 @@ all:		$(SRCS_TEST:.c=.o)
        
 %.o:	%.c	$(HEADERS)
 	@cd		$(DIR) && $(MAKE)
-	gcc		$< $(GNL) $(FLAGS) -I $(DIR) -L -lftprintf
-	@echo		"$(L_YELLOWB)"RUN TEST: $< "$(L_WHITE)"
+	gcc		$< $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf
 	@./a.out
 
 norm:
