--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: .
+        working-directory: srcs
     steps:
     - uses: actions/checkout@v2
     - name: Install Python
