new test from the functions

--- a/srcs/libft/Makefile
+++ b/srcs/libft/Makefile
@@ -37,7 +37,7 @@ all: 		$(NAME)
 %.o: 		%.c
 	cc -o 		$@ -c $< -I ./ $(FLAGS)
 
-$(NAME): 	$(SRCS:.c=.o)
+$(NAME): 	$(SRCS:.c=.o) bonus
 	ar -rcs 		$(NAME) $(SRCS:.c=.o)
 
 bonus: 		$(NAME)	$(SRCS_BOUNS:.c=.o)
