--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -10,7 +10,7 @@ L_GREENB		=			'\033[1;32m'
 ################ CONFIG		##################
 DIR 			= 			../srcs/
 GNL				=			get_next_line.c get_next_line_utils.c
-SRCS_TEST 		= 			ft_printf_mandatory_test.c formatstring_test.c printstring_test.c
+SRCS_TEST 		= 			ft_printf_mandatory_test.c formatstring_test.c printstring_test.c ft_printf_mandatory_bonus_test.c
 HEADERS 		= 			minunit.h get_next_line.h
 ################ OTHERs		##################
 FLAGS 			=			-Wall -Werror -Wextra
@@ -31,7 +31,7 @@ norm:
 	@cd 		$(DIR) && $(MAKE) $@	
 
 clean:
-	@rm			-f ./files/*
+	@rm			find ./files -type f -name "*" -exec rm "{}"
 	@rm			-f *.o
 	@cd 		$(DIR) && $(MAKE) $@
 
