--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -10,7 +10,9 @@ L_GREENB		=			'\033[1;32m'
 ################ CONFIG		##################
 DIR 			= 			../srcs/
 GNL				=			get_next_line.c get_next_line_utils.c
-SRCS_TEST 		= 			ft_printf_mandatory_test.c formatstring_test.c printstring_test.c ft_printf_mandatory_bonus_test.c 
+SRCS_TEST 		= 			ft_printf_mandatory_test.c ft_printf_mandatory_bonus_test.c \
+							formatstring_test.c formatchar_test.c \
+							printstring_test.c
 HEADERS 		= 			minunit.h get_next_line.h
 ################ OTHERs		##################
 FLAGS 			=			-Wall -Werror -Wextra
@@ -48,4 +50,10 @@ string: $(HEADERS)
 	@cd		$(DIR) && $(MAKE)
 	clang	-g formatstring_test.c $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf
 	@echo	$(L_YELLOWB)[RUN formatstring_test.c]$(L_WHITE)
+	@./a.out
+
+char: $(HEADERS)
+	@cd		$(DIR) && $(MAKE)
+	clang	-g formatchar_test.c $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf
+	@echo	$(L_YELLOWB)[RUN formatchar_test.c]$(L_WHITE)
 	@./a.out
