--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -12,7 +12,7 @@ DIR 			= 			../srcs/
 GNL				=			get_next_line.c get_next_line_utils.c
 SRCS_TEST 		= 			ft_printf_mandatory_test.c ft_printf_mandatory_bonus_test.c \
 							formatstring_test.c formatchar_test.c formatint_test.c \
-							printstring_test.c printchar_test.c
+							printstring_test.c printchar_test.c printint_test.c
 OUTS			=			./outs/
 SOUTS			= 			$(addprefix $(OUTS), $(SRCS_TEST))
 F				=			
@@ -83,4 +83,10 @@ int: $(HEADERS)
 	@cd		$(DIR) && $(MAKE)
 	clang	-g formatint_test.c $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf
 	@echo	$(L_YELLOWB)[RUN formatint_test.c]$(L_WHITE)
+	@./a.out
+
+pint: $(HEADERS)
+	@cd		$(DIR) && $(MAKE)
+	clang	-g printint_test.c $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf
+	@echo	$(L_YELLOWB)[RUN printint_test.c]$(L_WHITE)
 	@./a.out
