--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -11,7 +11,7 @@ L_GREENB		=			'\033[1;32m'
 DIR 			= 			../srcs/
 GNL				=			get_next_line.c get_next_line_utils.c
 SRCS_TEST 		= 			ft_printf_mandatory_test.c ft_printf_mandatory_bonus_test.c \
-							formatstring_test.c formatchar_test.c formatint_test.c \
+							formatstring_test.c formatchar_test.c formatint_test.c formathex_test.c \
 							printstring_test.c printchar_test.c printint_test.c
 OUTS			=			./outs/
 SOUTS			= 			$(addprefix $(OUTS), $(SRCS_TEST))
@@ -25,20 +25,23 @@ all: 		m test valgrind
 
 %.o:		%.c	$(HEADERS)
 	@cd		$(DIR) && $(MAKE)
-	clang	-g $< $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf -o $(OUTS)$<
+	@clang	-g $< $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf -o $(OUTS)$<
 
 m: 			$(SRCS_TEST:.c=.o)
 
 $(SOUTS):
-	$@
+	@echo  
+	@echo  $(L_YELLOWB)[TEST $@]$(L_WHITE)
+	@$@
+	@echo  $(L_WHITEB)"*******************************************************************"$(L_WHITEB)
 
 test: 		m $(SOUTS)
 
 valgrind:	m
-	for X in $(SOUTS) ; do \
+	@for X in $(SOUTS) ; do \
 		echo  $(L_YELLOWB)[TEST $$X]$(L_WHITE) && \
 		valgrind -s --track-origins=yes --error-exitcode=42 --leak-check=full $$X && \
-		echo	$(L_YELLOWB)[END VALGRIND $$X]$(L_WHITE) ; done
+		echo $(L_WHITEB)"*******************************************************************"$(L_WHITE) ; done
 
 norm:
 	@cd 		$(DIR) && $(MAKE) $@	
