--- a/minunit/Makefile
+++ b/minunit/Makefile
@@ -9,7 +9,6 @@ L_GREEN			=			'\033[0;32m'
 L_GREENB		=			'\033[1;32m'
 ################ CONFIG		##################
 DIR 			= 			../srcs/
-AUX				=			./min_aux/faux.c
 GNL				=			get_next_line.c get_next_line_utils.c
 SRCS_TEST 		= 			ft_printf_mandatory_test.c ft_printf_bonus_test.c \
 							formatstring_test.c formatchar_test.c formatint_test.c formathex_test.c \
@@ -26,7 +25,7 @@ all: 		m test valgrind
 
 %.o:		%.c	$(HEADERS)
 	@cd		$(DIR) && $(MAKE)
-	@clang	-g $< $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf $(AUX) -o $(OUTS)$<
+	@clang	-g $< $(GNL) $(FLAGS) -I $(DIR) -L $(DIR) -lftprintf -o $(OUTS)$<
 
 m: 			$(SRCS_TEST:.c=.o)
 
