--- a/.github/workflows/memoryleak.yml
+++ b/.github/workflows/memoryleak.yml
@@ -14,4 +14,4 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y valgrind
       - name: run valgrind
-        run: make valgrind
+        run: make v
