--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -39,6 +39,7 @@ $(NAME): $(SRCS:.c=.o)
        
 $(LIBFT):
 	@make 	-C $(DIR_LIBFT)
+	@cp		./libft/srcs/libft.a ./libftprintf.a
 
 %.o:	%.c	$(HEADERS)
 	@cc		-o $@ -c $<  -I ./ $(FLAGS)
